--- a/server/grpc-practice-server/templates/deployment.yaml
+++ b/server/grpc-practice-server/templates/deployment.yaml
@@ -7,6 +7,7 @@ metadata:
     helm.sh/chart: {{ include "grpc-practice-server.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+    date: "{{ .Release.Time.Seconds }}"
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
