--- a/server/grpc-practice-server/values.yaml
+++ b/server/grpc-practice-server/values.yaml
@@ -2,12 +2,12 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 3
 
 image:
   repository: psycore/grpc-practice-server
-  tag: latest
-  pullPolicy: Always
+  tag: 3
+  pullPolicy: IfNotPresent
 
 nameOverride: ""
 fullnameOverride: ""
