--- a/server/grpc-practice-server/templates/deployment.yaml
+++ b/server/grpc-practice-server/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: grpc
-              containerPort: {{ .Values.service.port }}
+              containerPort: {{ .Values.service.targetPort }}
               protocol: TCP
           livenessProbe:
             tcpSocket:
