client support set headers (like "canary: always") to enable gray release. (and red-blue deployment.)

--- a/server/grpc-practice-server/values.yaml
+++ b/server/grpc-practice-server/values.yaml
@@ -23,6 +23,7 @@ ingress:
     nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
 #    nginx.ingress.kubernetes.io/canary: "true"
 #    nginx.ingress.kubernetes.io/canary-by-header: "canary"
+#    nginx.ingress.kubernetes.io/canary-weight: "20"
   paths:
     - /hello.HelloService/SayHello
   hosts:
