--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -13,9 +13,10 @@ FROM alpine
 
 WORKDIR /grpc-practice-server
 
-COPY --from=builder /grpc-practice-server/server-bin     /grpc-practice-server/server
+COPY --from=builder /grpc-practice-server/server-bin   /grpc-practice-server/server
+COPY --from=builder /grpc-practice-server/crt          /grpc-practice-server/crt
 
 #ENV GRPC_GO_LOG_SEVERITY_LEVEL=INFO
 EXPOSE 10000
 
-CMD ["./server"]
+CMD ["./server", "-tls", "-cert_file", "crt/cert.pem", "-key_file", "crt/key.pem"]
