add skaffold demo

--- a/server/grpc-practice-server/templates/deployment.yaml
+++ b/server/grpc-practice-server/templates/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     helm.sh/chart: {{ include "grpc-practice-server.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    date: "{{ .Release.Time.Seconds }}"
+    date: "{{ now | unixEpoch }}"
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: grpc
